# civis-jupyter-extensions

./: .gitignore  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  README.md  README.rst  pyproject.toml  requirements.txt  setup.py
.circleci/: config.yml
civis_jupyter_ext/magics/: query.py
civis_jupyter_ext/magics/tests/: test_query.py
